--- a/program/białe_nucleo/BURZA2/BURZA2.ioc
+++ b/program/białe_nucleo/BURZA2/BURZA2.ioc
@@ -3,20 +3,11 @@ ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.DataAlign=ADC_DATAALIGN_RIGHT
-ADC1.DiscontinuousConvMode=DISABLE
-ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
-ADC1.EnableAnalogWatchDog=false
-ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog
-ADC1.InjNumberOfConversion=0
-ADC1.NbrOfConversion=1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,ScanConvMode,ContinuousConvMode,DMAContinuousRequests
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.ScanConvMode=DISABLE
+ADC1.ScanConvMode=ENABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -39,38 +30,38 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IPNb=5
-Mcu.Name=STM32F411C(C-E)Ux
-Mcu.Package=UFQFPN48
+Mcu.Name=STM32F411R(C-E)Tx
+Mcu.Package=LQFP64
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=VP_SYS_VS_Systick
 Mcu.PinsNb=2
 Mcu.UserConstants=
-Mcu.UserName=STM32F411CEUx
-MxCube.Version=4.21.0
-MxDb.Version=DB.4.0.210
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
+Mcu.UserName=STM32F411RETx
+MxCube.Version=4.22.1
+MxDb.Version=DB.4.0.221
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
 PCC.Checker=false
 PCC.Line=STM32F411
-PCC.MCU=STM32F411C(C-E)Ux
-PCC.PartNumber=STM32F411CEUx
+PCC.MCU=STM32F411R(C-E)Tx
+PCC.PartNumber=STM32F411RETx
 PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=null
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
@@ -78,7 +69,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=C\:/Users/Michal/STM32Cube/Repository/STM32Cube_FW_F4_V1.16.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F411CEUx
+ProjectManager.DeviceId=STM32F411RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -88,36 +79,49 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=BURZA.ioc
-ProjectManager.ProjectName=BURZA
+ProjectManager.ProjectFileName=BURZA2.ioc
+ProjectManager.ProjectName=BURZA2
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.CortexFreq_Value=16000000
+RCC.48MHZClocksFreq_Value=84000000
+RCC.AHBFreq_Value=84000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=84000000
+RCC.CortexFreq_Value=84000000
+RCC.EthernetFreq_Value=84000000
+RCC.FCLKCortexFreq_Value=84000000
+RCC.FLatency-AdvancedSettings=FLASH_LATENCY_2
 RCC.FamilyName=M
-RCC.HSE_VALUE=25000000
+RCC.HCLKFreq_Value=84000000
+RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLN,PLLP,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
+RCC.MCO2PinFreq_Value=84000000
+RCC.PLLCLKFreq_Value=84000000
+RCC.PLLN=336
+RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLQCLKFreq_Value=84000000
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.RTCHSEDivFreq_Value=4000000
+RCC.SYSCLKFreq_VALUE=84000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-board=BURZA
+board=NUCLEO-F411RE
+boardIOC=true
