--- a/program/UART/UART.ioc
+++ b/program/UART/UART.ioc
@@ -16,15 +16,15 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Resolution=ADC_RESOLUTION_8B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.ScanConvMode=ENABLE
+ADC1.ScanConvMode=DISABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
@@ -121,43 +121,46 @@ ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_USART2_UART_Init-USART2-false-HAL
-RCC.48MHZClocksFreq_Value=50000000
-RCC.AHBFreq_Value=100000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=50000000
-RCC.APB1TimFreq_Value=100000000
-RCC.APB2Freq_Value=100000000
-RCC.APB2TimFreq_Value=100000000
-RCC.CortexFreq_Value=100000000
-RCC.EthernetFreq_Value=100000000
-RCC.FCLKCortexFreq_Value=100000000
-RCC.FLatency-AdvancedSettings=FLASH_LATENCY_3
+RCC.48MHZClocksFreq_Value=32000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
+RCC.AHBFreq_Value=8000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV16
+RCC.APB1Freq_Value=500000
+RCC.APB1TimFreq_Value=1000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=4000000
+RCC.APB2TimFreq_Value=8000000
+RCC.CortexFreq_Value=8000000
+RCC.EthernetFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=8000000
+RCC.FLatency-AdvancedSettings=FLASH_LATENCY_0
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=100000000
+RCC.HCLKFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=100000000
-RCC.PLLCLKFreq_Value=100000000
+RCC.MCO2PinFreq_Value=64000000
+RCC.PLLCLKFreq_Value=64000000
 RCC.PLLM=4
-RCC.PLLN=100
-RCC.PLLQCLKFreq_Value=50000000
+RCC.PLLN=64
+RCC.PLLQCLKFreq_Value=32000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=100000000
+RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=96000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=500000
-RCC.VCOOutputFreq_Value=200000000
+RCC.VCOOutputFreq_Value=128000000
 RCC.VcooutputI2S=48000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-USART2.IPParameters=VirtualMode
+USART2.IPParameters=VirtualMode,OverSampling
+USART2.OverSampling=UART_OVERSAMPLING_16
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
